# kata-boilerplates

./: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
python/: .envrc  .gitignore  pyproject.toml
python/src/hello/: hello.py
python/tests/: test_hello.py
src/: Hello.spec.ts  Hello.test.ts
typescript/: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
typescript/src/: Hello.ts
typescript/tests/: Hello.test.ts
