[tool.poetry]
name = "python-kata-boilerplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
mypy = "^1.5.1"
ruff = "^0.0.291"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report xml"
testpaths = "tests"
pythonpath = ["src"]

[tool.black]
line_length = 90
target_version = ["py39"]

[tool.ruff]
src = ["src", "tests"]
line-length = 90
target-version = "py39"
